staging/us-east-2/sec-gp.tf
resource "aws_security_group" "Pub_sg" {
  # ... other configuration ...
  name = "Public-sg"
  ingress {
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }
  ingress {
    from_port        = 443
    to_port          = 443
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }
  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  ## create before destroy rule ###
  lifecycle {
    create_before_destroy = true
  }
  tags = {
    Name = "Public-sg"
  }
}
